<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/prefTitle">
		<CheckBoxPreference
		 android:title="@string/sleep"
		 android:defaultValue="false"
		 android:summary="@string/sleepSummary"
		 android:key="sleepPref" />
		
		<CheckBoxPreference
		 android:title="@string/victory"
		 android:defaultValue="true"
		 android:summary="@string/victorySummary"
		 android:key="victoryPref" />
		 
		<ListPreference
		 android:title="@string/gamemode"
		 android:defaultValue="std"
		 android:summary="@string/gamemodeSummary"
		 android:key="gamemodePref"
		 android:entries="@array/gamemodeDisplay"
		 android:entryValues="@array/gamemode" />
		 
		<EditTextPreference
		 android:title="EditText"
		 android:defaultValue="lol"
		 android:inputType="number" />
	</PreferenceCategory>
	
</PreferenceScreen>
